<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.main.ui.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_qr"
                android:textStyle="bold"
                android:textColor="#fff"
                android:padding="10dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="50dp"
                android:textSize="20sp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textAllCaps="false"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/image_text"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:textColor="#000"
                android:layout_marginTop="18dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/your_qr_code_will_be_displayed_here" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:paddingBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingVertical="10dp"
                    android:textColor="#fff"
                    android:layout_marginTop="18dp"
                    android:textAlignment="center"
                    android:text="@string/generated_qr" />

                <ImageView
                    android:id="@+id/qrImageview"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:background="#fff"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginBottom="10dp" />

                <ImageView
                    android:id="@+id/shareQr"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>